# RAGBotChattify-

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: artifacts.py  auth.py  chats.py  collections.py  export.py  messages.py  models_list.py  router.py  share.py  upload.py
backend/app/core/: auth.py  deps.py  exceptions.py
backend/app/models/: __init__.py  artifact.py  chat.py  collection.py  document.py  message.py  share.py  user.py  vote.py
backend/app/schemas/: artifact.py  auth.py  chat.py  collection.py  message.py
backend/app/services/: ingestion.py  llm.py  rag.py  streaming.py
backend/app/vector_store/: client.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(chat)/: layout.tsx  page.tsx
frontend/src/app/knowledge/: layout.tsx  page.tsx
frontend/src/components/artifacts/: artifact-panel.tsx
frontend/src/components/auth/: login-form.tsx  register-form.tsx
frontend/src/components/chat/: chat-header.tsx  chat-panel.tsx  citation-chip.tsx  collection-selector.tsx  message-bubble.tsx  message-input.tsx  message-list.tsx  model-selector.tsx  streaming-text.tsx
frontend/src/components/knowledge/: collection-card.tsx  (+2 more)
frontend/src/hooks/: use-chat-stream.ts  use-scroll-anchor.ts  use-sidebar.ts
frontend/src/lib/: api-client.ts  auth-context.tsx  stream-parser.ts  types.ts
(+5 files in other folders)
