[project]
name = "ragbot-chattify"
version = "1.0.0"
description = "RAG-powered chatbot API with FastAPI"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "chromadb>=0.4.0",
    "langchain-text-splitters>=0.0.1",
    "python-multipart>=0.0.6",
    "pypdf2>=3.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
